# agentabi

./: .gitignore  .readthedocs.yaml  README_en.md  README_zh.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  changelog.md  index.md
docs/api/: index.md  ir-events.md  ir-types.md  providers.md  session.md
docs/examples/: index.md
docs/usage/: discovery.md  installation.md  native-vs-sdk.md  quickstart.md  streaming.md
examples/: quickstart.py  streaming.py
research/: 01_session_manager_cli_interaction.md  02_high_star_projects_survey.md  03_zed_acp_ecosystem.md  README.md  claude_code.md  codex.md  gemini_cli.md  openclaw.md  opencode.md  pi.md  synthesis.md
src/agentabi/: __init__.py  auto_detect.py  session.py
src/agentabi/middleware/: __init__.py  logging.py  timeout.py  usage.py
src/agentabi/providers/: __init__.py  base.py  claude_native.py  claude_sdk.py  codex_native.py  codex_sdk.py  gemini_native.py  gemini_sdk.py  opencode_native.py  registry.py
src/agentabi/types/: __init__.py
src/agentabi/types/claude_code/: __init__.py  config_types.py  event_types.py
src/agentabi/types/codex/: __init__.py  config_types.py  event_types.py
src/agentabi/types/gemini_cli/: __init__.py  config_types.py  event_types.py
src/agentabi/types/ir/: __init__.py  capabilities.py  events.py  helpers.py  permissions.py  session.py  task.py  type_guards.py
src/agentabi/types/opencode/: __init__.py  config_types.py  event_types.py
tests/: test_ir_types.py  test_middleware.py  test_session.py
tests/integration/: conftest.py  test_claude.py  test_codex.py  test_cross_cli.py  test_gemini.py  test_native_vs_sdk.py  test_opencode.py
tests/providers/: __init__.py  test_claude_native.py  test_claude_sdk.py  test_codex_native.py  test_codex_sdk.py  test_gemini_native.py  test_gemini_sdk.py  test_opencode_native.py  test_registry.py  test_subprocess_behavior.py
