[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentabi"
dynamic = ["version"]
authors = [{name = "Peng Ding", email = "pding.dp@foxmail.com"}]
description = "Unified async Python API for driving coding agent CLIs — Claude Code, Codex, Gemini CLI, and more"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = [
    "ai",
    "agent",
    "coding-agent",
    "cli",
    "claude-code",
    "codex",
    "gemini-cli",
    "opencode",
    "llm",
    "async",
    "subprocess",
    "orchestration",
    "streaming",
    "multi-agent",
    "automation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk>=0.1.0"]
codex = ["codex-sdk-python>=0.1.0"]
gemini = ["gemini-cli-sdk>=0.5.0"]
all = [
    "claude-agent-sdk>=0.1.0",
    "codex-sdk-python>=0.1.0",
    "gemini-cli-sdk>=0.5.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov",
    "ruff>=0.15.0",
    "ty>=0.0.31",
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]

[project.urls]
Documentation = "https://agentabi.readthedocs.io"
Repository = "https://github.com/oaklight/agentabi"
Issues = "https://github.com/oaklight/agentabi/issues"

[tool.setuptools.dynamic]
version = {attr = "agentabi.__version__"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"agentabi" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "C901"]
ignore = ["UP007"]  # Allow Union[X, Y] syntax for Python 3.9 compat

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: Real CLI integration tests (require installed CLIs)",
    "claude: Tests requiring Claude Code CLI",
    "codex: Tests requiring Codex CLI",
    "gemini: Tests requiring Gemini CLI",
    "opencode: Tests requiring OpenCode CLI",
    "cross_cli: Cross-CLI consistency tests",
    "native_vs_sdk: Native vs SDK provider comparison tests",
]

[tool.ty.environment]
python-version = "3.9"

[tool.ty.src]
include = ["src", "tests"]

[tool.ty.rules]
# Optional SDK deps are not installed during type checking
unresolved-import = "ignore"
# ty cannot narrow Union[TypedDict, ...] members by discriminator key;
# also SDK type stubs may lag behind actual API.
invalid-key = "ignore"
invalid-assignment = "ignore"
